--- a/assets/css/issue2.css
+++ b/assets/css/issue2.css
@@ -102,7 +102,7 @@ header h1, header h2 {
   left: 0;
   width: 100%;
   height: 90%;
-  background-image: url('/assets/images/crowd3.png');
+  background-image: url('../images/crowd3.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
